Added input div

--- a/popup/choose_page.css
+++ b/popup/choose_page.css
@@ -1,16 +1,49 @@
 html, body {
-  width: 300px;
-  background-color: rgb(151, 79, 219);
+    width: 300px;
+    background-color: rgb(151, 79, 219);
+}
+
+.row {
+    height: 40px;
+    width: 100%;
+    padding: 4px;
 }
 
 .page-choice {
-  width: 100%;
-  padding: 4px;
-  font-size: 1.5em;
-  text-align: center;
-  cursor: pointer;
+    width: 90%;
+    padding: 4px;
+    font-size: 1.5em;
+    text-align: center;
+    cursor: pointer;
+    float : left;
 }
 
-.page-choice:hover {
-  background-color: #00000049;
+.state {
+    width: 10%;
+    padding: 4px;
+    font-size: 1em;
+    text-align: center;
+    cursor: pointer;
+    float : right;
+}
+
+.input {
+    width: 88%;
+    padding: 4px;
+    font-size: 1em;
+    text-align: center;
+    background-color: rgb(249, 180, 255);
+    float : center;
+}
+
+.commit {
+    width: 10%;
+    padding: 4px;
+    text-align: center;
+    background-color: rgb(173, 129, 255);
+    float : right;
+}
+
+.row:hover {
+    background-color: #00000049;
 }
